--- a/ProyectoFinalJS/app_server/views/categorias.jade
+++ b/ProyectoFinalJS/app_server/views/categorias.jade
@@ -2,47 +2,52 @@ extends layout
 
 block content
   h1.my-4.text-center Categorias
-  .btn-group-lg.btn-group-justified
-    a.btn.btn-primary(href='#') Paisajes
-    a.btn.btn-primary(href='#') Retrato
-    a.btn.btn-primary(href='#') Naturaleza
-    a.btn.btn-primary(href='#') Periodismo
-    a.btn.btn-primary(href='#') Arquitectura
+  .container-fluid
+    .row.text-center
+      .col-md-12
+        .btn-group.btn-group-justified
+          a.btn.btn-primary(href='#') Paisajes
+          a.btn.btn-primary(href='#') Retrato
+          a.btn.btn-primary(href='#') Naturaleza
+          a.btn.btn-primary(href='#') Periodismo
+          a.btn.btn-primary(href='#') Arquitectura
+  br
+  br
   .container
     .row.text-center.text-lg-left
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
       .col-lg-3.col-md-4.col-xs-6
         a.d-block.mb-4.h-100(href='#')
-          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300'),
+          img.img-fluid.img-thumbnail(src='http://placehold.it/400x300')
