--- a/ProyectoFinalJS/app_server/views/layouts/layout.hbs
+++ b/ProyectoFinalJS/app_server/views/layouts/layout.hbs
@@ -26,14 +26,15 @@
             <i class='fa fa-bars fa-lg icon'></i>
         </a>
         <!-- *******************  Navbar brand *******************  -->
-        <a class="navbar-reveal navbar-brand" href="#"><img class="py-2 pr-2" src="img/LogoF593-white.png" style="height: 50px;"></a>
+        <a class="navbar-reveal navbar-brand" href="/"><img class="py-2 pr-2" src="img/LogoF593-white.png" style="height: 50px;"></a>
         <!-- *******************  Colapsable *******************  -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class='closebtn' onclick="closeNav()">
                 <img class="py-2 pr-2" src="img/LogoF593-white.png" style="height: 50px;">
             </a>
-            <a href="categorias">Categorias</a>
-            <a href="fotografos">Fotografos</a>
+            <a href="/">Inicio</a>
+            <a href="categorias">Categorías</a>
+            <a href="fotografos">Fotógrafos</a>
             <a href="perfil">Perfiles</a>
         </div>
         <!-- *******************  Fin del contenido colapsable *******************  -->
