--- a/ProyectoFinalJS/app_server/views/categorias.hbs
+++ b/ProyectoFinalJS/app_server/views/categorias.hbs
@@ -6,14 +6,14 @@
 </div>
 <br>
 <div class='container'>
-    <div class='row text-center'>
+    <div class='row text-center pt-5'>
         <div class='col-md-12'>
             <div class='btn-group btn-group-lg btn-group-justified'>
-                <a href="#" class="btn btn-primary">Paisaje</a>
-                <a href="#" class="btn btn-primary">Retrato</a>
-                <a href="#" class="btn btn-primary">Naturaleza</a>
-                <a href="#" class="btn btn-primary">Arquitectura</a>
-                <a href="#" class="btn btn-primary">Periodismo</a>
+                <a href="#" class="btn btn-secondary">Paisaje</a>
+                <a href="#" class="btn btn-secondary">Retrato</a>
+                <a href="#" class="btn btn-secondary">Naturaleza</a>
+                <a href="#" class="btn btn-secondary">Arquitectura</a>
+                <a href="#" class="btn btn-secondary">Periodismo</a>
             </div>
         </div>
     </div>
