ImagenPerfil - NO CARGA

--- a/ProyectoFinalJS/app_server/views/perfil.hbs
+++ b/ProyectoFinalJS/app_server/views/perfil.hbs
@@ -1,7 +1,8 @@
 <div class="headerPerfil">
     <div class="favoritaFotografo"></div>
-        <img class="fotoFotografo" src="https://placeimg.com/350/1001/people" alt="Juan Sus">
-   
+    
+   <img class="fotoFotografo" src="..\..\public\img\fotoPerfilFotografo.png" alt="Juan Sus"> 
+   <div class="fotoFotografo"></div>
 
     <div class="infoFotografo text-center">
         <h2 class="info-titulo text-white p-5">Nombre del Fotografo</h2>
@@ -17,6 +18,9 @@
         </div>
     </div>
 </div>
+
+
+
 <h1 class="my-4 text-center">Galería</h1>
 <div class="tz-gallery">
 
@@ -86,7 +90,7 @@
 
 </div>
 
-<div style="padding-top:25px">
+<div style="padding-top:2em;padding-bottom:2em;">
     <div class="video">
         <center>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/vomj35HdhYs" frameborder="0" allow="autoplay; encrypted-media"
