conexion express-api

--- a/ProyectoFinalJS/app_server/views/index.hbs
+++ b/ProyectoFinalJS/app_server/views/index.hbs
@@ -71,7 +71,7 @@
                     <div class="card-body">
                         <h2 class="card-title">{{titulofoto}}</h2>
                         <p class="card-text">{{captionfoto}}</p>
-                        <a href="#" class="btn btn-secondary">{{fotografo}} &rarr;</a>
+                        <a href="/fotografos/{{fotografos._id}}" class="btn btn-secondary">{{fotografo}} &rarr;</a>
                     </div>
                     <div class="card-footer text-muted">
                         {{fechafoto}}
