--- a/ProyectoFinalJS/app_server/views/perfil.hbs
+++ b/ProyectoFinalJS/app_server/views/perfil.hbs
@@ -2,15 +2,13 @@
 <div class="headerPerfil">
     <div class="favoritaFotografo"></div>
     
-   <img class="fotoFotografo" src="..\..\public\img\fotoPerfilFotografo.png" alt="Juan Sus"> 
+   <img class="fotoFotografo" src="{{urlfotoperfil}}" alt="Juan Sus"> 
    <div class="fotoFotografo"></div>
 
     <div class="infoFotografo text-center">
-        <h2 class="info-titulo text-white p-5">Nombre del Fotografo</h2>
+        <h2 class="info-titulo text-white p-5">{{nombre}}</h2>
         <div class="info-contenido text-white">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere semper urna, ut pellentesque sem
-                fermentum vel. Mauris luctus quis lectus nec luctus. Donec ut diam et neque eleifend varius sed quis
-                erat.</p><br>
+            <p>{{bio}}</p><br>
             <a href="#mail" class="btn text-networks btn-link btn-just-icon btn-twitter"><i class="fa fa-envelope"></i></a>
             <a href="#twitter" class="btn text-networks btn-link btn-just-icon btn-twitter"><i class="fa fa-twitter"></i></a>
             <a href="#facebook" class="btn text-networks btn-link btn-just-icon btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -26,67 +24,13 @@
 <div class="tz-gallery">
 
     <div class="row">
-
-        <div class="col-sm-12 col-md-4">
-            <a class="lightbox" href="img/a.jpg">
-                <img src="img/a.jpg" alt="Bridge">
-            </a>
-        </div>
+        {{#each fotos}}
         <div class="col-sm-6 col-md-4">
-            <a class="lightbox" href="img/b.jpg">
-                <img src="img/b.jpg" alt="Park">
+            <a class="lightbox" href="{{this.url}}">
+                <img src="{{this.url}}" alt="foto">
             </a>
         </div>
-        <div class="col-sm-6 col-md-4">
-            <a class="lightbox" href="img/c.jpg">
-                <img src="img/c.jpg" alt="Tunnel">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-8">
-            <a class="lightbox" href="img/d.jpg">
-                <img src="img/d.jpg" alt="Traffic">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a class="lightbox" href="img/Dumbo-2.jpg">
-                <img src="img/Dumbo-2.jpg" alt="Coast">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a class="lightbox" href="img/f.jpg">
-                <img src="img/f.jpg" alt="Rails">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a class="lightbox" href="img/g.png">
-                <img src="img/g.png" alt="Rails">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a class="lightbox" href="img/h.jpg">
-                <img src="img/h.jpg" alt="Rails">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a class="lightbox" href="img/paisaje6.jpg">
-                <img src="img/paisaje6.jpg" alt="Rails">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-8">
-            <a class="lightbox" href="img/i.png">
-                <img src="img/i.png" alt="Rails">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a class="lightbox" href="img/k.jpg">
-                <img src="img/k.jpg" alt="Rails">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <a class="lightbox" href="img/l.jpg">
-                <img src="img/l.jpg" alt="Rails">
-            </a>
-        </div>
+        {{/each}}
     </div>
 
 </div>
