--- a/ProyectoFinalJS/app_server/views/categorias.hbs
+++ b/ProyectoFinalJS/app_server/views/categorias.hbs
@@ -10,7 +10,7 @@
         <div class='col-md-12'>
             <div class='btn-group btn-group-lg btn-group-justified'>
                 {{#each categorias}}
-                <a href="#" class="btn btn-primary">{{this}}</a>
+                <a href="/fotografos/fotos/{{this}}" class="btn btn-primary">{{this}}</a>
                 {{/each}}
             </div>
         </div>
